--- a/index.html
+++ b/index.html
@@ -1,1 +1,135 @@
-
+<html>
+<head>
+<title>TGGGGGGG</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+</head>
+<body bgcolor="#FFFFFF" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<!-- Save for Web Slices (TGGGGGGG.jpg) -->
+<table id="Tableau_01" width="1460" height="821" border="0" cellpadding="0" cellspacing="0">
+	<tr>
+		<td colspan="13">
+			<img src="Presskit-FDP_01.jpg" width="1459" height="175" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="175" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="11" rowspan="7">
+			<img src="Presskit-FDP_02.jpg" width="1022" height="410" alt=""></td>
+		<td>
+			<a href="https://www.youtube.com/watch?v=AYvbdaHFsEY" target="_blank">
+				<img src="CLIP.jpg" width="351" height="74" border="0" alt=""></a></td>
+		<td rowspan="13">
+			<img src="Presskit-FDP_04.jpg" width="86" height="646" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="74" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="Presskit-FDP_05.jpg" width="351" height="55" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="55" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://soundcloud.com/veiga000/veiga000-fruit-de-la-passion/s-872yI4qYFWm?si=328bcd7716254dc8bc35572053fe091b&utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" target="_blank">
+				<img src="Soundcloud.jpg" width="351" height="76" border="0" alt=""></a></td>
+		<td>
+			<img src="spacer.gif" width="1" height="76" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="Presskit-FDP_07.jpg" width="351" height="53" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="53" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<a href="https://www.dropbox.com/scl/fo/roq5z0fakuoao410gfwud/APibLK64SRpjj2VmkiIYQ-c?rlkey=ljg0dy6ga0kjzdt91icndlpo5&st=4oaqyv85&dl=0" target="_blank">
+				<img src="Photos.jpg" width="351" height="73" border="0" alt=""></a></td>
+		<td>
+			<img src="spacer.gif" width="1" height="73" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="Presskit-FDP_09.jpg" width="351" height="56" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="56" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="2">
+			<a href="https://www.dropbox.com/scl/fo/ey6rztk06m0jfq31ersfx/AOrfoKvvVIgjEkM7goAeZHc?rlkey=yfnjykvq3lslpucnk8x0rgedn&e=1&st=fqosinnu&dl=0" target="_blank">
+				<img src="Videos.jpg" width="351" height="79" border="0" alt=""></a></td>
+		<td>
+			<img src="spacer.gif" width="1" height="23" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="6">
+			<img src="Presskit-FDP_11.jpg" width="59" height="236" alt=""></td>
+		<td rowspan="2">
+			<a href="https://www.dropbox.com/scl/fi/29jd38o5hs89nb2jg1aev/Biographie-de-l%E2%80%99artiste-Veiga000.paper?dl=0&rlkey=mfz3s5l7gjqktd7btldmtkui5&st=jmej1i8u" target="_blank">
+				<img src="Communik-press.jpg" width="351" height="76" border="0" alt=""></a></td>
+		<td colspan="9" rowspan="3">
+			<img src="Presskit-FDP_13.jpg" width="612" height="124" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="56" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="5">
+			<img src="Presskit-FDP_14.jpg" width="351" height="180" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="20" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="4">
+			<img src="Presskit-FDP_15.jpg" width="351" height="160" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="48" alt=""></td>
+	</tr>
+	<tr>
+		<td colspan="5">
+			<img src="Presskit-FDP_16.jpg" width="320" height="12" alt=""></td>
+		<td rowspan="2">
+			<a href="https://open.spotify.com/intl-fr/artist/1mbSvcnVbN4iVwLEaTnJQd?si=EaSuaLrDRkK8eUEyvj_X3A" target="_blank">
+				<img src="Spotify.jpg" width="83" height="77" border="0" alt=""></a></td>
+		<td rowspan="3">
+			<img src="Presskit-FDP_18.jpg" width="60" height="112" alt=""></td>
+		<td rowspan="2">
+			<a href="https://www.youtube.com/channel/UCcV257tNdCsA8as3I1v3jYA" target="_blank">
+				<img src="Youtube.jpg" width="98" height="77" border="0" alt=""></a></td>
+		<td rowspan="3">
+			<img src="Presskit-FDP_20.jpg" width="51" height="112" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="12" alt=""></td>
+	</tr>
+	<tr>
+		<td rowspan="2">
+			<img src="Presskit-FDP_21.jpg" width="83" height="100" alt=""></td>
+		<td>
+			<a href="https://www.instagram.com/veiga000/" target="_blank">
+				<img src="Insta.jpg" width="62" height="65" border="0" alt=""></a></td>
+		<td rowspan="2">
+			<img src="Presskit-FDP_23.jpg" width="60" height="100" alt=""></td>
+		<td>
+			<a href="https://x.com/VEIGA_000" target="_blank">
+				<img src="X-twitt.jpg" width="73" height="65" border="0" alt=""></a></td>
+		<td rowspan="2">
+			<img src="Presskit-FDP_25.jpg" width="42" height="100" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="65" alt=""></td>
+	</tr>
+	<tr>
+		<td>
+			<img src="Presskit-FDP_26.jpg" width="62" height="35" alt=""></td>
+		<td>
+			<img src="Presskit-FDP_27.jpg" width="73" height="35" alt=""></td>
+		<td>
+			<img src="Presskit-FDP_28.jpg" width="83" height="35" alt=""></td>
+		<td>
+			<img src="Presskit-FDP_29.jpg" width="98" height="35" alt=""></td>
+		<td>
+			<img src="spacer.gif" width="1" height="35" alt=""></td>
+	</tr>
+</table>
+<!-- End Save for Web Slices -->
+</body>
+</html>
